Spacing issue

--- a/client/styles/_landing.scss
+++ b/client/styles/_landing.scss
@@ -42,7 +42,6 @@ hr {
 .landing-stats {
   height: 500px;
   margin-top: 60px;
-  margin-bottom: 60px;
 }
 
 .modulo-stats {
